# dirshot

./: README.md  examples.py  pyproject.toml
src/dirshot/: __init__.py  dirshot.py  examples.py
tests/: test.py  test_dirshot.py
