[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dirshot"
version = "0.1.1"
authors = [
  { name="init-helpful", email="init.helpful@gmail.com" },
]
description = "A flexible utility for creating project snapshots and searching for files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/init-helpful/dirshot"
"Bug Tracker" = "https://github.com/init-helpful/dirshot/issues"